# rpi-remote-control

./: .gitignore  Cargo.toml
scripts/: compile.sh  provide.sh
src/: error.rs  input.rs  main.rs  output.rs  state.rs
