[package]
name = "rpi-remote-control"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]

[dependencies]
ssd1306 = "0.2.0"
embedded-hal = "0.2.1"
linux-embedded-hal = "0.2.0"
serde = "1"
serde_derive = "1"
serde_json = "*"
dotenv = "*"

[dependencies.homeassistant]
git = "https://github.com/maxjoehnk/homeassistant-rs"
branch = "feature/bearer-access-token"

[patch."https://github.com/maxjoehnk/homeassistant-rs".homeassistant]
path = "../homeassistant-rs"